Add ability to monitor multiple titles

--- a/sd_card/config/bcat-ftpd/config.ini
+++ b/sd_card/config/bcat-ftpd/config.ini
@@ -1,7 +1,15 @@
 [TitleID]
-titleid:=0x01008DB008C2C000
+quantity:=1
+titleid1:=0x01008DB008C2C000
+titleid2:=0x0100187003A36000
+titleid3:=0x0
+titleid4:=0x0
+titleid5:=0x0
+titleid6:=0x0
+titleid7:=0x0
 
-# titleid:=0x01008DB008C2C000 -> Title ID of the program whose BCAT data you want to access.  Default is Pokémon Shield
+# quantity:=1 -> Number of titles you want to access. Valid range is 1-7
+# titleid*:=0x01008DB008C2C000 -> Title ID of the program whose BCAT data you want to access.  Default is Pokémon Shield
 
 [User]
 user:=bcat
