--- a/sd_card/config/bcat-ftpd/config.ini
+++ b/sd_card/config/bcat-ftpd/config.ini
@@ -1,15 +1,26 @@
 [TitleID]
-quantity:=1
-titleid1:=0x01008DB008C2C000
+quantity:=9
+#Let's Go, Pikachu
+titleid1:=0x010003F003A34000
+#Let's Go, Eevee
 titleid2:=0x0100187003A36000
-titleid3:=0x0
-titleid4:=0x0
-titleid5:=0x0
-titleid6:=0x0
-titleid7:=0x0
+#Sword
+titleid3:=0x0100ABF008968000
+#Shield
+titleid4:=0x01008DB008C2C000
+#Brilliant Diamond
+titleid5:=0x0100000011D90000
+#Shining Pearl
+titleid6:=0x010018E011D92000
+#Legends: Arceus
+titleid7:=0x01001F5010DFA000
+#Scarlet
+titleid8:=0x0100A3D008C5C000
+#Violet
+titleid9:=0x01008F6008C5E000
 
-# quantity:=1 -> Number of titles you want to access. Valid range is 1-7
-# titleid*:=0x01008DB008C2C000 -> Title ID of the program whose BCAT data you want to access.  Default is Pokémon Shield
+# quantity:=9 -> Number of titles you want to access. Valid range is 1-9
+# titleid*:=0x010003F003A34000 -> Title ID of the program whose BCAT data you want to access.
 
 [User]
 user:=bcat
